Move list of shorteners into configuration
So that users can curate their own list of shorteners instead of relying
on the one hard-coded into this library, expose the list as a
configurable set.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,6 +6,11 @@ Style/MethodName:
   Exclude:
     - lib/embiggen.rb
 
+# Due to the shorteners list
+Metrics/MethodLength:
+  Exclude:
+    - lib/embiggen/configuration.rb
+
 # Due to conditional loading of Rubocop
 Lint/HandleExceptions:
   Exclude:
