Specify `single_quotes` style in `StringLiterals` cop
In order to overwrite `Hound` default.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -16,6 +16,10 @@ Lint/HandleExceptions:
   Exclude:
     - Rakefile
 
+# Overwrite Hound default
+Style/StringLiterals:
+  EnforcedStyle: single_quotes
+
 # For Ruby 1.8 compatibility
 Style/DotPosition:
   EnforcedStyle: trailing
