--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,27 +1,2 @@
-Style/Documentation:
-  Enabled: false
-
-# Due to the URI() helper
-Style/MethodName:
-  Exclude:
-    - lib/embiggen.rb
-
-# Due to the shorteners list
-Metrics/MethodLength:
-  Exclude:
-    - lib/embiggen/configuration.rb
-
-# Due to conditional loading of Rubocop
-Lint/HandleExceptions:
-  Exclude:
-    - Rakefile
-
-# Overwrite Hound default
-Style/StringLiterals:
-  EnforcedStyle: single_quotes
-
-# For Ruby 1.8 compatibility
-Style/DotPosition:
-  EnforcedStyle: trailing
-Style/HashSyntax:
-  EnforcedStyle: hash_rockets
+inherit_gem:
+  house_style: ruby/rubocop.yml
